// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonScrollList /> renders an empty button scroll list element 1`] = `
<div
  className="button-scroll-list-container"
>
  <button
    className="icon-button column-header__setting-btn"
    onClick={[Function]}
  >
    <div
      aria-hidden={true}
      className="icon icon-chevron-left"
      title=""
    />
  </button>
  <div
    className="button-scroll-list"
  />
  <button
    className="icon-button column-header__setting-btn"
    onClick={[Function]}
  >
    <div
      aria-hidden={true}
      className="icon icon-chevron-right"
      title=""
    />
  </button>
</div>
`;

exports[`<ButtonScrollList /> renders the children 1`] = `
<div
  className="button-scroll-list-container"
>
  <button
    className="icon-button column-header__setting-btn"
    onClick={[Function]}
  >
    <div
      aria-hidden={true}
      className="icon icon-chevron-left"
      title=""
    />
  </button>
  <div
    className="button-scroll-list"
  >
    <div>
      <div />
    </div>
    <div>
      <div />
    </div>
    <div>
      <div />
    </div>
    <div>
      <div />
    </div>
    <div>
      <div />
    </div>
  </div>
  <button
    className="icon-button column-header__setting-btn"
    onClick={[Function]}
  >
    <div
      aria-hidden={true}
      className="icon icon-chevron-right"
      title=""
    />
  </button>
</div>
`;
